# prisma-engines

./: .envrc  Cargo.toml  Makefile  datamodel_v2.prisma  docker-compose.yml  test.prisma
.buildkite/: engineer
introspection-engine/connectors/introspection-connector/src/: error.rs
introspection-engine/connectors/sql-introspection-connector/: Cargo.toml
introspection-engine/connectors/sql-introspection-connector/src/: calculate_datamodel.rs  commenting_out_guardrails.rs  error.rs  introspection.rs  introspection_helpers.rs  lib.rs  prisma_1_defaults.rs  re_introspection.rs  sanitize_datamodel_names.rs  version_checker.rs
introspection-engine/introspection-engine-tests/src/: test_api.rs
introspection-engine/introspection-engine-tests/tests/re_introspection/: mod.rs  postgres.rs
introspection-engine/introspection-engine-tests/tests/tables/: mssql.rs
libs/datamodel/connectors/dml/: Cargo.toml
libs/json-rpc-stdio/: Cargo.toml
libs/prisma-models/src/field/: relation.rs
libs/prisma-models/src/projections/: model_projection.rs
libs/prisma-models/src/sql_ext/: column.rs
libs/prisma-value/: Cargo.toml
libs/sql-schema-describer/: Cargo.toml
libs/sql-schema-describer-js/: Cargo.toml
libs/sql-schema-describer-js/src/: lib.rs
libs/sql-schema-describer/src/: error.rs  io_shell.rs  lib.rs  mssql.rs  mysql.rs  postgres.rs  sqlite.rs
libs/sql-schema-describer/tests/test_api/: mod.rs
libs/test-cli/: Cargo.toml
libs/test-setup/: Cargo.toml
libs/test-setup/src/: connectors.rs  lib.rs
libs/test-setup/src/connectors/: tags.rs
migration-engine/connectors/sql-migration-connector/src/: flavour.rs  sql_database_step_applier.rs  sql_schema_differ.rs
migration-engine/core/src/commands/: list_migrations.rs
migration-engine/migration-engine-tests/: Cargo.toml
migration-engine/migration-engine-tests/src/: test_api.rs
migration-engine/migration-engine-tests/src/test_api/: create_migration.rs
migration-engine/migration-engine-tests/tests/: migration_tests.rs
migration-engine/migration-engine-tests/tests/create_migration/: create_migration_tests.rs
migration-engine/migration-engine-tests/tests/errors/: error_tests.rs
migration-engine/migration-engine-tests/tests/existing_databases/: mod.rs
migration-engine/migration-engine-tests/tests/migrations/: soft_resets.rs  sql.rs  types.rs
migration-engine/migration-engine-tests/tests/schema_push/: mod.rs
migration-engine/qe-setup/src/: lib.rs
query-engine/: 746_issue_graph
query-engine/connector-test-kit-rs/query-tests-setup/: Cargo.toml
query-engine/connector-test-kit-rs/query-tests-setup/src/: query_result.rs
query-engine/connectors/mongodb-query-connector/: Cargo.toml
query-engine/connectors/sql-query-connector/src/: cursor_condition.rs  filter_conversion.rs  ordering.rs  row.rs
query-engine/core/src/executor/: interpreting_executor.rs  (+1 more)
query-engine/javascript-bindings/: Cargo.toml
query-engine/prisma/src/: cli.rs  context.rs  main.rs  opt.rs  server.rs
query-engine/query-engine/: Cargo.toml
query-engine/query-engine-napi/src/: engine.rs  logger.rs
query-engine/query-engine-node-api/: Cargo.toml
query-engine/query-engine-node-api/src/: engine.rs  logger.rs
query-engine/query-engine/src/: cli.rs  lib.rs  logger.rs  main.rs  opt.rs
testp/: Cargo.toml  LICENSE_MIT
testp/src/: lib.rs
(+105 files in other folders)
