[workspace]
members = [
  "introspection-engine/connectors/introspection-connector",
  "introspection-engine/connectors/sql-introspection-connector",
  "libs/datamodel/connectors/datamodel-connector",
  "libs/datamodel/connectors/sql-datamodel-connector",
  "libs/datamodel/connectors/mongodb-datamodel-connector",
  "prisma-fmt",
  "libs/datamodel/core",
  "libs/json-rpc-stdio",
  "libs/native-types",
  "libs/prisma-inflector",
  "libs/prisma-models",
  "libs/prisma-value",
  "libs/sql-ddl",
  "libs/sql-schema-describer",
  "libs/user-facing-errors",
]

[profile.dev]
split-debuginfo = "unpacked"

[profile.dev.package.backtrace]
opt-level = 3

[profile.release.package.introspection-core]
codegen-units = 1
opt-level = 'z' # Optimize for size.
#strip="symbols"