[package]
name = "sql-schema-describer-js"
version = "0.1.0"
authors = ["Tom Houlé <tom@tomhoule.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
futures = "0.3.14"
js-sys = "0.3.50"
sql-schema-describer = { path = "../sql-schema-describer" }
wasm-bindgen = "0.2.73"
wasm-bindgen-futures = "0.4.23"
