[package]
name = "javascript-bindings"
version = "0.1.0"
authors = ["Julius de Bruijn <julius+github@nauk.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
name = "query_engine"

[build-dependencies]
neon-build = "0.4.0"

[dependencies]
neon = "0.4.0"
